--- a/app/src/main/res/layout/view_compose.xml
+++ b/app/src/main/res/layout/view_compose.xml
@@ -28,14 +28,14 @@
         <View
             android:layout_width="56dp"
             android:layout_height="56dp"
-            android:layout_gravity="top|right"
+            android:layout_gravity="top|end"
             android:background="@drawable/cancel_shadow" />
 
         <ImageButton
             android:id="@+id/cancel"
             android:layout_width="56dp"
             android:layout_height="56dp"
-            android:layout_gravity="top|right"
+            android:layout_gravity="top|end"
             android:background="@null"
             android:padding="16dp"
             android:src="@drawable/ic_cancel" />
@@ -45,19 +45,24 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/message_sent">
+        android:minHeight="40dp"
+        android:layout_margin="16dp"
+        android:background="@drawable/message_sent"
+        android:animateLayoutChanges="true">
 
         <com.doubledotlabs.senzil.ui.view.QKEditText
             android:id="@+id/compose_reply_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_marginBottom="16dp"
-            android:layout_marginLeft="8dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginStart="4dp"
             android:layout_marginRight="-4dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginEnd="-4dp"
             android:layout_toLeftOf="@+id/attachment_panel"
+            android:layout_toStartOf="@+id/attachment_panel"
             android:gravity="center_vertical"
             android:hint="@string/hint_reply"
             android:imeOptions="flagNoExtractUi"
@@ -72,8 +77,10 @@
             android:id="@+id/attachment_panel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:layout_toLeftOf="@+id/compose_button"
-            android:gravity="center_vertical"
+            android:layout_toStartOf="@+id/compose_button"
+            android:layout_gravity="center_vertical"
             android:orientation="horizontal"
             android:visibility="gone">
 
@@ -107,8 +114,9 @@
             android:id="@+id/compose_button"
             android:layout_width="wrap_content"
             android:layout_height="42dp"
-            android:layout_alignBottom="@+id/compose_reply_text"
+            android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:layout_marginBottom="-16dp"
             android:animateLayoutChanges="true">
 
@@ -143,8 +151,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:layout_alignTop="@+id/compose_reply_text"
             android:layout_toRightOf="@+id/compose_reply_text"
+            android:layout_toEndOf="@+id/compose_reply_text"
             android:gravity="center_horizontal"
             android:maxLines="1"
             android:paddingTop="16dp"
