--- a/app/src/main/res/layout/view_compose.xml
+++ b/app/src/main/res/layout/view_compose.xml
@@ -86,24 +86,30 @@
 
             <ImageButton
                 android:id="@+id/attach"
-                android:layout_width="42dp"
-                android:layout_height="42dp"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
                 android:background="@drawable/ripple_light"
                 android:padding="16dp"
                 android:src="@drawable/ic_photo" />
 
             <ImageButton
                 android:id="@+id/camera"
-                android:layout_width="42dp"
-                android:layout_height="42dp"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
                 android:background="@drawable/ripple_light"
                 android:padding="16dp"
                 android:src="@drawable/ic_camera" />
 
             <ImageButton
                 android:id="@+id/delay"
-                android:layout_width="42dp"
-                android:layout_height="42dp"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
                 android:background="@drawable/ripple_light"
                 android:padding="16dp"
                 android:src="@drawable/ic_timer" />
@@ -113,11 +119,11 @@
         <FrameLayout
             android:id="@+id/compose_button"
             android:layout_width="wrap_content"
-            android:layout_height="42dp"
+            android:layout_height="32dp"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginBottom="-16dp"
+            android:layout_marginBottom="-8dp"
             android:animateLayoutChanges="true">
 
             <ImageView
@@ -131,8 +137,8 @@
 
             <com.github.lzyzsd.circleprogress.DonutProgress
                 android:id="@+id/progress"
-                android:layout_width="42dp"
-                android:layout_height="42dp"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
                 android:layout_gravity="center"
                 android:padding="0dp"
                 android:rotation="90"
@@ -157,7 +163,7 @@
             android:layout_toEndOf="@+id/compose_reply_text"
             android:gravity="center_horizontal"
             android:maxLines="1"
-            android:paddingTop="16dp"
+            android:paddingTop="8dp"
             android:textColor="@color/grey_light"
             app:type="tertiary" />
 
